# gapstars-multi-agent-starter-kit

./: .env.example  CLAUDE.md
apps/api/: pyproject.toml
apps/api/.claude/: settings.local.json
apps/api/src/api/: cli.py  config.py  main.py
apps/api/src/api/agent/: graph.py
apps/api/src/api/interview/: __init__.py  graph.py  state.py
apps/api/src/api/interview/agents/: __init__.py  jd_parser.py  matching.py  orchestrator.py  question_generator.py  resume_parser.py  rubric_generator.py  structure_composer.py
apps/api/src/api/interview/prompts/: __init__.py  jd_parser.py  matching.py  question_generator.py  resume_parser.py  rubric_generator.py  structure_composer.py
apps/api/src/api/interview/utils/: __init__.py  pdf_parser.py  text_sanitizer.py
apps/api/src/api/routers/: __init__.py  agent.py  interview.py
apps/web/: Dockerfile  package-lock.json  package.json
apps/web/app/interview/: page.tsx
apps/web/components/chat/: chat-interface.tsx  message-list.tsx  provider-selector.tsx
apps/web/components/interview/: generation-progress.tsx  interview-type-selector.tsx  interview-wizard.tsx  jd-input.tsx  resume-upload.tsx
apps/web/components/interview/results/: export-actions.tsx  questions-view.tsx  results-container.tsx  rubric-view.tsx  (+1 more)
apps/web/hooks/: use-chat.ts  use-file-upload.ts  use-interview-generator.ts  use-pdf-export.ts
apps/web/lib/: api.ts  interview-api.ts  interview-types.ts  pdf-generator.ts  types.ts
blueprints/: 01-customer-support-ticket.md  02-bug-triage.md  03-marketing-project-management.md
docs/: REQUIREMENTS.md
