[project]
name = "api"
version = "0.1.0"
description = "Multi-Agent Starter — FastAPI + LangGraph backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sse-starlette>=2.1.0",
    "python-dotenv>=1.0.0",
    "typer>=0.13.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "langgraph>=0.2.55",
    "langgraph-checkpoint-postgres>=2.0.0",
    "langchain-openai>=0.2.0",
    "langchain-core>=0.3.0",
    "psycopg[binary,pool]>=3.2.0",
    "httpx>=0.27.0",
    "langchain-mistralai>=1.1.2",
]

[project.scripts]
api = "api.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/api"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "ruff>=0.8.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
